tests/baselines/reference/dontShowCompilerGeneratedMembers.errors.txt
tests/cases/compiler/dontShowCompilerGeneratedMembers.ts(3,6): error TS1139: Type parameter declaration expected.
tests/cases/compiler/dontShowCompilerGeneratedMembers.ts(3,7): error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
tests/cases/compiler/dontShowCompilerGeneratedMembers.ts(4,1): error TS1110: Type expected.


==== tests/cases/compiler/dontShowCompilerGeneratedMembers.ts (3 errors) ====
    var f: {
        x: number;
        <-
         ~
!!! error TS1139: Type parameter declaration expected.
          
!!! error TS2705: The right side of a difference type must be a string or string literal union, or a type parameter constrained to one of these.
    };
    ~
!!! error TS1110: Type expected.